# DeliveryFlow

./: README.md
app/backend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  commands.sh  docker-compose.test.yml  docker-compose.yml  pyproject.toml
app/backend/.cursor/rules/: architecture.mdc  linting.mdc  python-style.mdc  testing.mdc
app/backend/.devcontainer/: devcontainer.json
app/backend/.github/workflows/: ci.yml
app/backend/migrations/: README.md  env.py
app/backend/migrations/versions/: 0001_create_users_table.py
app/backend/src/app/: main.py
app/backend/src/app/api/: app.py  dependencies.py  errors.py  middlewares.py
app/backend/src/app/api/schemas/: auth.py  common.py  order.py  user.py
app/backend/src/app/api/v1/: auth.py  health.py  router.py  tracking.py  users.py
app/backend/src/app/application/dto/: order.py  user.py
app/backend/src/app/application/interfaces/: cache.py  unit_of_work.py
app/backend/src/app/application/mappers/: order.py  user.py
app/backend/src/app/core/: config.py  logging.py  security.py
app/backend/src/app/domain/: exceptions.py
app/backend/src/app/domain/entities/: order.py  user.py
app/backend/src/app/domain/repositories/: order_repository.py  user_repository.py
app/backend/src/app/domain/value_objects/: email.py  order_status.py  role.py
app/backend/src/app/infrastructure/cache/: redis_cache.py
app/backend/src/app/infrastructure/db/: base.py  engine.py  unit_of_work.py
app/backend/src/app/infrastructure/repositories/: order_repository.py  user_repository.py
app/backend/tests/: conftest.py
app/backend/tests/integration/: conftest.py
app/backend/tests/integration/api/: test_health.py  test_orders_flow.py  test_users_flow.py
app/backend/tests/unit/domain/: test_order_status.py  test_user_entity.py
(+27 files in other folders)
